docs: add reset password api
